Fix overflow

--- a/css/isthis.css
+++ b/css/isthis.css
@@ -58,18 +58,17 @@ h1 {
 /* GENERAL STYLING */
 
 body {
-  position: relative;
   background-color: #000;
   color: #fff;
   font-family: 'Inter', sans-serif;
+  background-image: url("../img/daniel-menakhovsky-zqyk7S_FoGA-unsplash.jpg");
+  background-size: cover;
 }
 
 canvas {
-  background-image: url("../img/daniel-menakhovsky-zqyk7S_FoGA-unsplash.jpg");
-  background-size: 100%;
-  background-repeat: no-repeat;
   position: absolute;
-  min-height: 100%;
+  width: 100%;
+  height: 100%;
 }
 
 a {
@@ -173,10 +172,8 @@ footer p {
 
 @media (max-width: 1200px) {
 
-  canvas {
+  body {
     background-image: url("../img/daniel-menakhovsky-zqyk7S_FoGA-unsplash-mob.jpg");
-    background-size: 100% 100%;
-    background-repeat: no-repeat;
   }
 
   header {
@@ -195,10 +192,8 @@ footer p {
 
 @media (max-width: 900px) {
 
-  canvas {
+  body {
     background-image: url("../img/daniel-menakhovsky-zqyk7S_FoGA-unsplash-mob.jpg");
-    background-size: 100% 100%;
-    background-repeat: no-repeat;
   }
 
   header {
